  * Implement dropping of old packets after gNB spec per LLCTECHOPX-34
  * Flush relayfs subbufs:
    - before closing (defer closing by one second)
    - on tc qdisc reset
    - when starting a handover
  * In TC_JANZ_RELAY_QUEUESZ now also indicate:
    - starting a handover (f8 bit#0)
    - current bandwidth limit, in bits/s (x8[0‥7] as u64)
  * Emit TC_JANZ_RELAY_QUEUESZ, even if early, when changing the rate
    and/or initiating a handover

 -- Thorsten Glaser <t.glaser@tarent.de>  Mon, 29 Aug 2022 23:18:40 +0200

iproute2 (5.10.0-4jens12) tarent; urgency=medium

  * Add bespoke sch_janz qdisc (experimental for feature parity testing)

 -- Thorsten Glaser <t.glaser@tarent.de>  Thu, 18 Aug 2022 01:38:14 +0200

iproute2 (5.10.0-4jens11) tarent; urgency=medium

  * Cache fragment information for IP packets
  * For nōn-first fragments that follow the first, use cached info

 -- Thorsten Glaser <t.glaser@tarent.de>  Sun, 31 Jul 2022 22:29:45 +0200

iproute2 (5.10.0-4jens10) tarent; urgency=medium

  * Rebuild in bullseye

 -- Thorsten Glaser <t.glaser@tarent.de>  Thu, 07 Jul 2022 20:34:58 +0200

iproute2 (5.10.0-4~jens+10) tarent; urgency=medium

  * jhtb: drop option “Hysteresis mode, less CPU load, less accurate”
  * add Linux 5.16 compatibility and catch up with upstream’s diffs
  * introduce “make versions” pseudo-target
  * make “make show-hz” (with/without version) more robust
  * handle API+ABI break in the so-called “stable” Linux kernel
  * check for strerrordesc_np to allow building with latest glibc
  * fix warnings from newer GCC
  * revert reporting flow ID
  * sch_jens reporting: for IPv4/IPv6 packets also report the nextheader
    (protocol) and if it’s TCP or UDP, their port numbers; this bumps the
    TC_JANZ_RELAY_SOJOURN revision number (together with flow ID removal)
    ‣ fragmented packets are not yet supported except the first fragment
  * fix small issues in the LKM wrapper Makefile