@@ -15,6 +15,7 @@ enum {
 	TCA_JANZ_MARKFULL,
 	TCA_JANZ_SUBBUFS,
 	TCA_JANZ_FRAGCACHE,
+	TCA_JANZ_XLATENCY,
 	__TCA_JANZ_MAX
 };
 
@@ -89,7 +90,9 @@ enum {
 	TC_JANZ_RELAY_QUEUESZ,
 
 	/* report a single packet leaving our queue */
-	/* d32 = sojourn time in 1024 ns units (-1 = drop on queue resize) */
+	/* d32 = sojourn time in 1024 ns units
+	         (-1 = drop on queue resize,
+		  -2 = drop before enqueue with extralatency applied) */
 	/* e16 = ECN marking range/percentage */
 	/* f8 = bitfield: 0:1=ECN bits on enqueue, 2=ECN bits are valid,
 		3:4=ECN bits on dequeue, TC_JANZ_RELAY_SOJOURN_xxxx,
